Swagger Documentation and event logic Co-authored-by: MelanieReissmann <MelanieReissmann@users.noreply.github.com>
